# resume-online

./: .gitignore  generate_pdf_cv.py  generate_resume.py  pyproject.toml  resume_data.yaml
.github/workflows/: deploy.yml
assets/templates/: .gitkeep  jinja_template.html  pdf_template.html
